--- a/client-template/src/index.css
+++ b/client-template/src/index.css
@@ -1,5 +1,17 @@
 .wrapper {
-  width: 300px;
-  height: 300px;
-  background-color: antiquewhite;
+  width: 330px;
+  height: 400px;
+  margin-left: 50px;
+  background-color: #E9EDC9;
+  border-radius: 37% 63% 55% 45% / 67% 52% 48% 33%;
+  position: absolute;
 }
+
+.pictures {
+  width: 300px;
+  height: 370px;
+  margin-top: 30px;
+  border-radius: 57% 43% 67% 33% / 43% 65% 35% 57% ;
+  position:absolute;
+}
+
