--- a/client-template/src/index.css
+++ b/client-template/src/index.css
@@ -2,9 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: jost;
 }
 
 body {
-  background-color: #ccc2b5;
-  
+  background-color: #ccc2b5; 
+
 }
