cleaned code, added from to checkout

--- a/client-template/src/index.css
+++ b/client-template/src/index.css
@@ -2,6 +2,7 @@
   --primary-color: #630436;
   --secondary-color: #59534e;
   --default-color:  #E3D5CA;
+  --header-color:  #D5BDAF;
 
   /* --background-color: #ccc2b5; */
   --background-color: #f1e7df;
@@ -17,5 +18,4 @@
 
 body {
   background-color: var(--background-color); 
-
 }
